# hermes-dashboard

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/hermes_dashboard/: __init__.py  __main__.py  app.py  config.py  schemas.py
src/hermes_dashboard/collectors/: backup.py  cron_jobs.py  logs.py  memory.py  processes.py  rlm.py  sessions.py  skills.py  system.py  usage.py
src/hermes_dashboard/routers/: agents.py  backup.py  cron.py  logs.py  memory.py  processes.py  rlm.py  sessions.py  skills.py  system.py  usage.py
src/hermes_dashboard/static/: index.html
src/hermes_dashboard/static/css/: app.css
src/hermes_dashboard/static/js/: app.js  backup.js  cron.js  logs.js  memory.js  processes.js  rlm.js  sessions.js  skills.js  system.js  usage.js
tests/: conftest.py
tests/test_routers/: test_api.py  test_backup.py
