[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-dashboard"
version = "0.1.0"
description = "Real-time web dashboard for the Hermes agent runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "KK" }]
keywords = ["hermes", "agent", "dashboard", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psutil>=6.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
]

[project.scripts]
hermes-dashboard = "hermes_dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_dashboard"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
